--- a/store/blocks/global/screen/faq.jsonc
+++ b/store/blocks/global/screen/faq.jsonc
@@ -15,18 +15,23 @@
             "flex-layout.row#category__content",
             "flex-layout.row#paragraph__content",
             "flex-layout.row#link__content"
-        ]
+        ],
+        "props":{
+        "blockClass":"faq__content"}
     },
     "flex-layout.row#title__content": {
         "children": [
             "rich-text#title"
-        ]
+        ],
+        "props":{
+        "blockClass":"title__content"}
     },
     "rich-text#title": {
         "props": {
             "text": "Centro de Ayuda",
             "textAlignment": "CENTER",
-            "textPosition": "CENTER"
+            "textPosition": "CENTER",
+            "blockClass":"title__content-text"
         }
     },
     "flex-layout.row#category__content": {
@@ -35,47 +40,55 @@
             "rich-text#policies",
             "rich-text#contact",
             "rich-text#store"
-        ]
+        ],
+        "blockClass":"category__content"
     },
     "rich-text#faq": {
         "props": {
             "text": "Preguntas frecuentes",
             "textAlignment": "CENTER",
-            "textPosition": "CENTER"
+            "textPosition": "CENTER",
+            "blockClass":"subtitle__content-text"
         }
     },
     "rich-text#policies": {
         "props": {
             "text": "Politica de cambios y devoluciones",
             "textAlignment": "CENTER",
-            "textPosition": "CENTER"
+            "textPosition": "CENTER",
+            "blockClass":"sutitle__content-text"
         }
     },
     "rich-text#contact": {
         "props": {
             "text": "Contacto",
             "textAlignment": "CENTER",
-            "textPosition": "CENTER"
+            "textPosition": "CENTER",
+            "blockClass":"subtitle__content-text"
         }
     },
     "rich-text#store": {
         "props": {
             "text": "Almacenes",
             "textAlignment": "CENTER",
-            "textPosition": "CENTER"
+            "textPosition": "CENTER",
+            "blockClass":"subtitle__content-text"
         }
     },
     "flex-layout.row#paragraph__content": {
         "children": [
             "rich-text#paragraph"
-        ]
+        ],
+        "props":{
+        "blockClass":"paragraph__content"
+        }
     },
     "rich-text#paragraph": {
         "props": {
             "text": "En carulla.com sabemos que la excelencia no es la mejor manera de actuar; es la única!. Por eso Queremos proveer a nuestros clientes una experiencia de compra única, estableciendo un vínculo emocional fuerte, por lo que a continuación encontrara un listado de preguntas y respuestas que le ayudaran a resolver sus inquietudes y que facilitan su compra a través de Carulla.com ya que queremos ser líderes en atención, calidez, amabilidad y vínculo de cercanía con usted.",
             "textAlignment": "CENTER",
             "textPosition": "CENTER",
-            "blockClass": "paragraph__content"
+            "blockClass": "paragraph__content-text"
         }
     },
     "flex-layout.row#link__content": {
@@ -85,7 +98,10 @@
         "flex-layout.row#link__content-three",
         "flex-layout.row#link__content-four",
         "flex-layout.row#link__content-five"*/
-        ]
+        ],
+        "props":{
+        "blockClass":"link__content"
+        }
     },
     "flex-layout.col#link__content-one": {
         "children": [
