--- a/manifest.json
+++ b/manifest.json
@@ -55,7 +55,8 @@
     "vtex.disclosure-layout": "1.x",
     "vtex.product-list": "0.x",
     "vtex.store-form": "0.x",
-    "vtex.store-newsletter": "1.x"
+    "vtex.store-newsletter": "1.x",
+    "vtex.checkout-summary": "0.x"
   },
   "peerDependencies": {
     "vtex.mega-menu": "2.x"
