--- a/store/blocks/global/components/header/header-section-three-login.jsonc
+++ b/store/blocks/global/components/header/header-section-three-login.jsonc
@@ -7,7 +7,8 @@
             "showIconProfile": true,
             "hasGoogleOneTap": true,
             "identifierPlaceholder": "holaaaaa",
-            "hideIconLabel": true
+            "hideIconLabel": true,
+            "blockClass":"vtexlogin__container"
         }
     }
 }
