--- a/manifest.json
+++ b/manifest.json
@@ -56,7 +56,8 @@
     "vtex.product-list": "0.x",
     "vtex.store-form": "0.x",
     "vtex.store-newsletter": "1.x",
-    "vtex.checkout-summary": "0.x"
+    "vtex.checkout-summary": "0.x",
+    "itglobers.whatsapp-button": "0.x"
   },
   "peerDependencies": {
     "vtex.mega-menu": "2.x"
