--- a/store/blocks/global/components/header/header-section-three-login.jsonc
+++ b/store/blocks/global/components/header/header-section-three-login.jsonc
@@ -8,7 +8,7 @@
             "hasGoogleOneTap": true,
             "identifierPlaceholder": "holaaaaa",
             "hideIconLabel": true,
-            "blockClass":"vtexlogin__container"
+            "blockClass":"login__container"
         }
     }
 }
