feat: add component pdf-reader and styles to department-search components

--- a/manifest.json
+++ b/manifest.json
@@ -59,7 +59,9 @@
     "vtex.checkout-summary": "0.x",
     "itglobers.whatsapp-button": "0.x",
     "itglobers.bullets-diagramation": "0.x",
-    "itglobers.add-to-cart-info": "0.x"
+    "itglobers.add-to-cart-info": "0.x",
+    "itglobers.custom-department-search": "0.x",
+    "itglobers.pdf-reader": "0.x"
   },
   "peerDependencies": {
     "vtex.mega-menu": "2.x",
