feat: add custom diagramation component

--- a/manifest.json
+++ b/manifest.json
@@ -62,7 +62,8 @@
     "itglobers.add-to-cart-info": "0.x",
     "itglobers.custom-department-search": "0.x",
     "itglobers.pdf-reader": "0.x",
-    "itglobers.quick-order": "0.x"
+    "itglobers.quick-order": "0.x",
+    "itglobers.special-diagramation": "0.x"
   },
   "peerDependencies": {
     "vtex.mega-menu": "2.x",
