--- a/store/blocks/global/components/home/home-section-seven.jsonc
+++ b/store/blocks/global/components/home/home-section-seven.jsonc
@@ -1,4 +1,4 @@
-{ 
+{
     "flex-layout.row#section__seven-monthsproducts-content": {
         "children": [
             "flex-layout.col#section__seven-monthsproducts"
@@ -10,82 +10,112 @@
     "flex-layout.col#section__seven-monthsproducts": {
         "children": [
             "rich-text#title__section-seven",
-            "flex-layout.row#section__seven-monthsproducts"
+            "flex-layout.row#section__seven-monthsproducts",
+            "custom-grid"
         ],
         "props": {
             "blockClass": "section__seven-monthsproducts-container"
         }
     },
-    "flex-layout.row#section__seven-monthsproducts":{
-    "children":[
-        "flex-layout.col#seven-monthsproducts-one",
-        "flex-layout.col#seven-monthsproducts-two",
-        "flex-layout.col#seven-monthsproducts-three",
-        "flex-layout.col#seven-monthsproducts-four"
-    ],
-    "props":{
-        "blockClass": "content__group-monthsproducts"
+    /*--------------------Custom Grid------------------------*/
+    "custom-grid": {
+        "children": [
+            "image#custom-grid-one",
+            "image#custom-grid-two",
+            "image#custom-grid-three",
+            "image#custom-grid-four",
+            "image#custom-grid-five"
+        ]
+    },
+    "image#custom-grid-one": {
+        "props": {
+            "src": "assets/img/organics1.jpg",
+            "maxWidth": "100%"
+        }
+    },
+    "image#custom-grid-two": {
+        "props": {
+            "src": "assets/img/organics2.jpg",
+            "maxWidth": "100%"
+        }
+    },
+    "image#custom-grid-three": {
+        "props": {
+            "src": "assets/img/organics3.jpg",
+            "maxWidth": "100%"
+        }
+    },
+    "image#custom-grid-four": {
+        "props": {
+            "src": "assets/img/organics4.jpg",
+            "maxWidth": "100%"
+        }
+    }, "image#custom-grid-five": {
+        "props": {
+            "src": "assets/img/organics5.jpg",
+            "maxWidth": "100%"
+        }
+    },
+    "flex-layout.row#section__seven-monthsproducts": {
+        "children": [
+            "flex-layout.col#seven-monthsproducts-one",
+            "flex-layout.col#seven-monthsproducts-two",
+            "flex-layout.col#seven-monthsproducts-three",
+            "flex-layout.col#seven-monthsproducts-four"
+        ],
+        "props": {
+            "blockClass": "content__group-monthsproducts"
+        }
+    },
+    "rich-text#title__section-seven": {
+        "props": {
+            "text": "Productos del mes",
+            "textAlignment": "CENTER",
+            "blockClass": "title__section-seven"
+        }
+    },
+    "flex-layout.col#seven-monthsproducts-one": {
+        "children": [
+            "image#monthsproducts_one"
+        ]
+    },
+    "image#monthsproducts_one": {
+        "props": {
+            "src": "assets/img/productosmes__img1.jpg",
+            "maxHeight": 240
+        }
+    },
+    "flex-layout.col#seven-monthsproducts-two": {
+        "children": [
+            "image#monthsproducts_two"
+        ]
+    },
+    "image#monthsproducts_two": {
+        "props": {
+            "src": "assets/img/productosmes__img2.jpg",
+            "maxHeight": 240
+        }
+    },
+    "flex-layout.col#seven-monthsproducts-three": {
+        "children": [
+            "image#monthsproducts_three"
+        ]
+    },
+    "image#monthsproducts_three": {
+        "props": {
+            "src": "assets/img/productosmes__img3.jpg",
+            "maxHeight": 240
+        }
+    },
+    "flex-layout.col#seven-monthsproducts-four": {
+        "children": [
+            "image#monthsproducts_four"
+        ]
+    },
+    "image#monthsproducts_four": {
+        "props": {
+            "src": "assets/img/productosmes__img4.jpg",
+            "maxHeight": 240
+        }
     }
-},
-
-"rich-text#title__section-seven": {
-    "props": {
-      "text": "Productos del mes",
-      "textAlignment": "CENTER",
-      "blockClass":"title__section-seven"
-    }
-  },
-
-"flex-layout.col#seven-monthsproducts-one":{
-    "children":[
-        "image#monthsproducts_one"
-    ]
-},
-
-"image#monthsproducts_one":{
-    "props": {
-        "src": "assets/img/productosmes__img1.jpg",
-        "maxHeight": 240
-    }
-},
-
-"flex-layout.col#seven-monthsproducts-two":{
-    "children":[
-        "image#monthsproducts_two"
-    ]
-},
-
-"image#monthsproducts_two":{
-    "props": {
-        "src": "assets/img/productosmes__img2.jpg",
-        "maxHeight": 240
-    }
-},
-"flex-layout.col#seven-monthsproducts-three":{
-    "children":[
-        "image#monthsproducts_three"
-    ]
-},
-
-"image#monthsproducts_three":{
-    "props": {
-        "src": "assets/img/productosmes__img3.jpg",
-        "maxHeight": 240
-    }
-},
-
-"flex-layout.col#seven-monthsproducts-four":{
-    "children":[
-        "image#monthsproducts_four"
-    ]
-},
-
-"image#monthsproducts_four":{
-    "props": {
-        "src": "assets/img/productosmes__img4.jpg",
-        "maxHeight": 240
-    }
-}
-
-
 }
